[project]
name = "generalist-moss-voice-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "moss>=1.0.0",
    "python-dotenv>=1.0.0",
    "livekit-agents>=1.0.0",
    "livekit-plugins-openai>=1.0.0",
    "livekit-plugins-deepgram>=1.0.0",
    "livekit-plugins-silero>=1.0.0",
    "livekit-plugins-cartesia>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
